--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.19.0",
     "formik": "^1.5.8",
     "markdown-to-jsx": "^6.10.3",
+    "material-table": "^1.52.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-intl": "^3.3.2",
